@@ -1,3 +1,10 @@
+2015-11-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/vanilla.cpp (europeanOptionEngine): Use intra-day time
+	calculation if QuantLib (>= 1.7) has been compiled for it
+	(americanOptionEngine): Idem
+	(europeanOptionArraysEngine): Idem
+
 2015-10-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* R/bond.R: Add missing parameter 'Monthly' to freq arguments in
